syntax = "proto3";
package kratos.api;

option go_package = "github.com/beiduoke/go-scaffold/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message Websocket {
    string network = 1;
    string addr = 2;
    string path = 3;
    google.protobuf.Duration timeout = 4;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  Websocket websocket = 3;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int64 log_level = 3;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  Database database = 1;
  Redis redis = 2;
}

message Auth {
  message Casbin {
    string model_path = 1;
    string policy_path = 2;
  }
  string service_key = 1;
  string api_key = 2;
  Casbin casbin = 3;
}
